--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         transition: background-color 0.2s ease-in;
       }
 
-      .btn:is(:hover, :focus) {
+      .btn:hover,
+      .btn:focus {
         cursor: pointer;
         background-color: var(--clr-primary-500);
       }
@@ -166,7 +167,7 @@
         content: "";
         width: 15px;
         height: 16px;
-        background-image: url(/images/icon-cart.svg);
+        background-image: url(./images/icon-cart.svg);
       } /*
       .attribution {font-size: 11px;text-align: center;}
       .attribution a {color: hsl(228, 45%, 44%);}
@@ -178,11 +179,11 @@
       <article class="prod">
         <picture class="prod_img">
           <source
-            srcset="/images/image-product-desktop.jpg"
+            srcset="./images/image-product-desktop.jpg"
             media="(min-width: 625px)"
           />
           <img
-            src="/images/image-product-mobile.jpg"
+            src="./images/image-product-mobile.jpg"
             alt="chanel gabrielle perfume laying on a white surface with green leaves at the top left and bottom right of it"
           />
         </picture>
